# stable-truncated-gaussian

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tests.py
images_icdf_comparison/: ReadMe.txt
src/stable_trunc_gaussian/: __init__.py  parallel_trunc_gaussian.py  sequential_trunc_gaussian.py  src.py  test_icdf.py  test_kl.py  tests.py
src/stable_trunc_gaussian.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
